# FACET-FSSG

./: .gitignore  CONTRIBUTING.md  FSSG.md  PUBLISHING.md  README.md
fssg/: README.md  pyproject.toml
fssg/fssg/: __init__.py  cli.py  config.py  core.py  errors.py  pyproject.toml  renderer.py
